objects/ssot__Case__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedUserId__c</fullName>
        <label>Assigned User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignedUserObject__c</fullName>
        <label>Assigned User Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseCategoryId__c</fullName>
        <label>Case Category</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseClosureReasonId__c</fullName>
        <label>Case Closure Reason</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseComments__c</fullName>
        <label>Case Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseCreationChannelId__c</fullName>
        <label>Case Creation Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseNumber__c</fullName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CasePriorityId__c</fullName>
        <label>Case Priority</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseStatusId__c</fullName>
        <label>Case Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseStatus__c</fullName>
        <label>[DoNotUse]Case Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseSupportWorkHoursId__c</fullName>
        <label>Case Support Work Hours</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseTypeId__c</fullName>
        <label>Case Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseType__c</fullName>
        <label>[DoNotUse]Case Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Case_AccountId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case_AccountId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Case_AccountId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>Case_AccountId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Case_AssignedUserId_map_User_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case_AssignedUserId_map_User_Id_N_1</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>Case_AssignedUserId_map_User_Id_N_1</relationshipLabel>
        <relationshipName>Case_AssignedUserId_map_User_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Case_IndividualId_map_Individual_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case_IndividualId_map_Individual_Id_N_1</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>Case_IndividualId_map_Individual_Id_N_1</relationshipLabel>
        <relationshipName>Case_IndividualId_map_Individual_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Case_ParentCaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case_ParentCaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>Case_ParentCaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>Case_ParentCaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Case_ProductId_map_Product_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case_ProductId_map_Product_Id_N_1</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>Case_ProductId_map_Product_Id_N_1</relationshipLabel>
        <relationshipName>Case_ProductId_map_Product_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClosedDateTime__c</fullName>
        <label>Closed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmailMessages__c</fullName>
        <label>EmailMessages relationship</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EscalationDateTime__c</fullName>
        <label>Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsClosedOnCreate__c</fullName>
        <label>Closed When Created</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsClosed__c</fullName>
        <label>Closed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsEscalated__c</fullName>
        <label>Escalated</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsWebPortalVisible__c</fullName>
        <label>Is Web Portal Visible</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Origin__c</fullName>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentCaseId__c</fullName>
        <label>Parent Case</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceEntitlementId__c</fullName>
        <label>Service Entitlement</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761149739_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountContact_Id_map_Case_AccountCo_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>AccountContact_Id_map_Case_AccountCo_rel</relationshipLabel>
        <relationshipName>rel_1697761149739_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761151709_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Id_map_Case_AccountId_N_1_16_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Account_Id_map_Case_AccountId_N_1_16_rel</relationshipLabel>
        <relationshipName>rel_1697761151709_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761156067_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case_AccountContactId_map_AccountCon_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>Case_AccountContactId_map_AccountCon_rel</relationshipLabel>
        <relationshipName>rel_1697761156067_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>